# spaceship

./: .gitignore  .gitmodules  Cargo.toml  README.md  justfile
backend/: Cargo.toml
backend/assets/: spaceship.service
backend/src/: args.rs  config.rs  err.rs  main.rs
frontend-vue/: components.d.ts  eslint.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend-vue/src/: main.ts
frontend-vue/src/components/: NotFound.vue
frontend-vue/src/components/ui/button/: Button.vue
frontend-vue/src/pages/: index.vue  test.vue
src/: args.rs  config.rs  main.rs
