[package]
name = "spaceship"
version = "0.1.0"
edition = "2021"

[dependencies]
backtrace = "0.3.73"
clap = { version = "4.5.12", features = ["derive"] }
config = { version = "0.14.0", features = ["toml"] }
rocket = { version = "0.5.1", features = ["json", "secrets", "tls", "uuid"] }
serde = { version = "1.0.204", features = ["derive"] }
toml = "0.8.19"
xdg = "2.5.2"

[profile.dev]
opt-level = 0
debug = true
strip = "none"
debug-assertions = true
overflow-checks = true
lto = 'off'
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = true
strip = "debuginfo"
debug-assertions = false
overflow-checks = true
lto = 'fat'
panic = 'unwind'
incremental = true
codegen-units = 16
rpath = false
