[workspace]

members = ["backend", "frontend"]
resolver = "2"

[profile.dev]
opt-level = 0
debug = true
strip = "none"
debug-assertions = true
overflow-checks = true
lto = 'off'
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = true
strip = "debuginfo"
debug-assertions = false
overflow-checks = true
lto = 'fat'
panic = 'unwind'
incremental = true
codegen-units = 16
rpath = false
